# PomoGachi

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  persist.ts  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: CongratsScreen.tsx  Controls.tsx  LaunchScreen.tsx  PetView.tsx  SettingsPanel.tsx  TimerDisplay.tsx
src/sounds/: chime.ts
src/themes/: confetti.ts  index.ts
src/timer/: engine.ts
